chrome word wrap in title/body fix

--- a/public/css/all.css
+++ b/public/css/all.css
@@ -1599,6 +1599,7 @@ img {
 }
 .articleBody, .articleTitle, .panel-body[name=panelbody] {
   word-wrap: break-word;
+  word-break: break-word;
 }
 .panel-body[name=panelbody] {
   white-space: pre-line;
